<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/user_image"
        android:layout_width="176dp"
        android:layout_height="176dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        tools:src="@mipmap/ic_github_foreground" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/label_name"
        android:textAlignment="center"
        android:textColor="#323232"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/user_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/label_username"
        android:textAlignment="center"
        android:textColor="#737373"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_followers"
                android:textAlignment="viewStart" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_followers"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_followings"
                android:textAlignment="viewStart" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_followings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_followings"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_company"
                android:textAlignment="viewStart" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_company"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_location"
                android:textAlignment="viewStart" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_location"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_repository"
                android:textAlignment="viewStart" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_repository"
                android:textAlignment="center" />

        </TableRow>

    </TableLayout>

</LinearLayout>