<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingHorizontal="8dp">

    <ImageView
        android:id="@+id/ivAvatarUser"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:contentDescription="@string/cd_avatar_github_user" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="vertical"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/label_name"
            android:textColor="#5C6BC0"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/label_username"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>